tests/compile_fail/non_string.stderr
error: expected string literal
 --> tests/compile_fail/non_string.rs:3:41
  |
3 |     let _: &str = include_docs::module!(123);
  |                                         ^^^
